Makes parsed list mutable again 👛
This commit reverts e706de373d3ff0e4df2aca70f0d5c3bc69d63a62 where code inspection suggestions have been applied.